[metadata]
name = StormFront-PavanDendi
version = 0.0.1
author = Pavan Dendi
author_email = pavan.dendi@databricks.com
description = A UI to run sqlstorm benchmarking library in a notebook
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: 
    Operating System :: OS Independent

[options]
package_dir =
    = StormFront
#packages = find:
install_requires=
    sqlparse
    ipywidgets
python_requires = >=3.8

#[options.packages.find]
#where = src

